k8s/PR/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linebot-pr
  labels:
    app: linebot-pr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: linebot-pr
  template:
    metadata:
      labels:
        app: linebot-pr
    spec:
      containers:
      - name: linebot-pod
        image: python:3.10-slim
        command: ["sleep", "infinity"]
        volumeMounts:
        - name: app-volume
          mountPath: /app
      volumes:
      - name: app-volume
        emptyDir: {}
